GC ID prefix for gc, humongous log messages are missing

XMLWordPrintable

    • gc
    • b115

      Output for gc, humongous log messages misses the gc id prefix, although these messages are clearly related to a given GC.

      E.g.

      [10.706s][debug][gc,humongous ] Dead humongous region 37 object size 694120 start 0x00000000fa500000 with remset 0 code roots 0 is marked 0 reclaim candidate 1 type array 1
      [10.706s][debug][gc,humongous ] Live humongous region 38 object size 694120 start 0x00000000fa600000 with remset 0 code roots 0 is marked 0 reclaim candidate 0 type array 1

      Should look like this:

      [4.184s][debug][gc,humongous ] GC(2) Dead humongous region 0 object size 694120 start 0x00000000f8000000 with remset 0 code roots 0 is marked 0 reclaim candidate 1 type array
      [4.185s][debug][gc,humongous ] GC(2) Live humongous region 1 object size 694120 start 0x00000000f8100000 with remset 0 code roots 0 is marked 0 reclaim candidate 0 type arra

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: