8153182: GC ID prefix for gc, humongous log messages are missing

Reviewed-by: mgerdin, brutisso